@@ -1,3 +1,8 @@
+2011-08-15  Eric Wasylishen  <ewasylishen@gmail.com>
+
+	* Image-test/Image-test.m: Test NSCustomImageRep, and test that
+	drawing it still works even if the rep size is not set.
+
 2011-07-19  Eric Wasylishen  <ewasylishen@gmail.com>
 
 	* Image-test/Image-test.m: Test SVG and PDF drawing.
